src/test/resources/fixtures/pitfalls/summer-time.php
<?php

    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x + 24</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">24 + $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x + 86400</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">86400 + $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x - 24</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">24 - $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x - 86400</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">86400 - $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x * 24</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">24 * $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x * 86400</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">86400 * $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x / 24</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">24 / $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x / 86400</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">86400 / $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x % 24</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">24 % $x</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x % 86400</error>;
    echo <error descr="Consider using \DateTime for DST safe date/time manipulation.">86400 % $x</error>;


    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x += 24</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x += 86400</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x -= 24</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x -= 86400</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x *= 24</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x *= 86400</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x /= 24</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x /= 86400</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x %= 24</error>;
    <error descr="Consider using \DateTime for DST safe date/time manipulation.">$x %= 86400</error>;